Add Java lesson example classes
Add 21 Java example classes under 2026DersteCozulenSorular/src demonstrating basic Java concepts: methods, loops, arrays, 2D/jagged arrays, exception handling, Scanner I/O, Random, switch, method overloading, casting/percentage calculations, and simple OOP (Member, Urun, Team). Includes utility class BolmeMetodu, small apps (email parsing, password check, radio/frequency demo, watering simulation, etc.), and various exercise solutions. Also update README.md.